--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>
     The Creative Process: For a More Creative Brain, Follow These 5 Steps
   </title>
-  <link rel=stylesheet href="./NumberOne/test.css"/>
+  <link rel=stylesheet href="./css/test.css"/>
 </head>
 
 <body>
