--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- nav section -->
     <nav class="nav-bar">
 
-      <a href="practice.html" target="_self" class="nav-bar-links" id="James-clear">James Clear</a>
+      <a href="index.html" target="_self" class="nav-bar-links" id="James-clear">James Clear</a>
       <a href="practicea.html" target="_self" class="nav-bar-links">Books</a>
       <a href="practiceb.html" target="_self" class="nav-bar-links">Articles</a>
       <a href="practicec.html" target="_self" class="nav-bar-links">Newsletter</a>
